--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -196,4 +196,5 @@
 </footer>
 
 </body>
+
 </html>
